support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_defined.i
%module xxx

#if defined()
#endif

#if defined
#endif
